Version 1.0 alpha: (03 May 2005)
	* plugins/seen.pl:
	  - Removed, replaced with sqlite-logger.pl's seen support
	* plugins/sqlite-logger.pl
	  - Now supports %seen. %log seen will hang around for the time being.
	  - %seen <nick> <events> count <number> will give multiple matches, up
	    to <number>.
	* simbot.pl:
	  - Now properly stops sending data to the server when trying to quit.
	

Version 1.0 alpha: (01 May 2005)
	* plugins/currency.pl:
	  - Rewritten! Now uses SOAP::Lite to fetch exchange information instead
	    of stealing it from xe.com.

Version 1.0 alpha: (30 Apr 2005)
	* plugins/aspell.pl:
	  - New plugin! Checks and offers suggestions for the user's spelling.
	    Requires Text::Aspell.

Version 1.0 alpha: (31 Dec 2004)
	* Happy New Year!
	* plugins/sqlite-logger.pl:
	  - Added a %log last <event> command, which will tell you when
	    something last happened. Useful for figuring out what the topic
	    used to be when someone changes it. Or will be once
	    'before that' works.

Version 1.0 alpha: (17 Dec 2004)
	* plugins/dict.pl:
	  - Added a feature that lists the dictionaries containing a specific
	    word.  Syntax is %define dictionaries with [word].

Version 1.0 alpha: (05 Dec 2004)
	* plugins/weather.pl:
	  - Uses NOAA's new XML current observations instead of the rather
	    brittle METAR for stations in the US. Other stations will still
	    use METAR.
	* plugins/sqlite-logger.pl:
	  - Creates the tables if they don't exist automatically.

Version 1.0 alpha: (04 Dec 2004)
	* plugins/sqlite-logger.pl:
	  - New plugin! Logs all chat to a SQLite database. Supports
	    %log recap and %log seen commands. Recap is intelligent, only
	    recaps what you actually missed. Seen supports the special
	    phrase 'before that' to look for the previous match. You can
	    also provide one or more of say, action, join, part, quit, kick,
	    mode, topic after the nickname to look up to limit to those